# data-engineering-bootcamp

./: my_script.py
00-bootcamp-project/: main-api.py  main-postgres.py  main-sftp.py
01-data-engineering-essentials/workshops/data-engineering-lifecycle/: extract.py
coincap/: exchanges.csv  get_exchanges.py  pyproject.toml
