[project]
name = "coincap"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariya Phengphon",email = "81862069+ChanAndKlee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
